...
        android:background="@drawable/edit_bg_grey"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/urlTV">

        <EditText
            android:id="@+id/urlET"
            style="@style/editTextStyle"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:cursorVisible="true"
            android:gravity="center_vertical"
            android:hint="@string/url_hint"
...
        android:layout_marginTop="4dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/urlErrorTV" />

    <android.widget.Button
        android:id="@+id/goBtn"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/enterTV"
        android:layout_marginTop="30dp"
        android:text="@string/go_to_site"
        android:textColor="@color/white"
...
