...
    <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="270dp"
        android:layout_height="match_parent"
        android:background="@color/white">

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/menuRV"
        android:contentDescription="@string/recycler_view_for_menu"
        android:layout_width="match_parent"
        android:layout_height="match_parent"/>

</androidx.constraintlayout.widget.ConstraintLayout>
</layout>
